--- a/index.html
+++ b/index.html
@@ -1464,6 +1464,8 @@ body {
         </div> 
       </div>
 
+      <input type="file" capture="user">
+
       <script>
         function updateTimeAndDate() {
     const now = new Date();
